--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <button class="button">Know More <i class="bi bi-info-circle-fill"></i></button>
              </div>
              <!-- img -->
-              <img src="./img/about-img.png" alt="">
+              <img src="./img/about-img.png" class="about-img" alt="">
         </div>
      </section>
 
